<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".OnboardingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/get_started"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        app:cornerRadius="8dp"
        android:text="@string/get_started"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/subTitle"
        android:layout_marginHorizontal="60dp"
        android:textAlignment="center"
        android:text="@string/with_hollo_freeze"
        android:layout_marginBottom="140dp"
        app:layout_constraintEnd_toEndOf="@id/get_started"
        app:layout_constraintStart_toStartOf="@id/get_started"
        app:layout_constraintBottom_toTopOf="@id/get_started"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/shop_with_ease"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/subTitle"
        app:layout_constraintEnd_toEndOf="@id/get_started"
        app:layout_constraintStart_toStartOf="@id/get_started" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="194dp"
        android:layout_marginBottom="80dp"
        android:src="@drawable/onboarding"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintBottom_toTopOf="@id/title"
        app:layout_constraintEnd_toEndOf="@id/title"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>