<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginBottom="35dp"
        android:text="Login"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@id/sign_up_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="Sign Up"
        android:textColor="@color/ourPrimaryColor"
        app:layout_constraintBottom_toBottomOf="@+id/sign_up_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/sign_up_tv" />

    <TextView
        android:id="@+id/sign_up_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:padding="5dp"
        android:text="Don’t have an account?"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sign_in_button"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/forgot_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginBottom="48dp"
        android:text="Forgot password ?"
        android:textColor="@color/ourPrimaryColor"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:paddingHorizontal="25dp"
        android:paddingVertical="15dp"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/forgot_password_button" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="25dp"
        android:paddingVertical="15dp"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/password" />

    <ImageView
        android:id="@+id/login_image_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/login_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="87dp"
        app:layout_constraintBottom_toTopOf="@id/email"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/welcome_back"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/login_image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>